# design-system-components

./: .editorconfig  .gitignore  .prettierignore  .prettierrc.toml  CONTRIBUTING.EN.md  CONTRIBUTING.ES.md  Cargo.toml  README.EN.md  README.md  flake.nix  icons-from-react.nu  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sc.toml
.github/: banner.psd
.github/workflows/: assign-on-comment.yml  npm-checks.yml  quality-gate.yml  release.yml
crates/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/leptos/: Cargo.toml
crates/leptos/src/: avatar.rs  badge.rs  button.rs  card.rs  chip.rs  flap.rs  icons.rs  input.rs  level.rs  lib.rs  progress_bar.rs  radio.rs  tag.rs
crates/leptos/src/icons/: alert.rs  arrow_down.rs  arrow_left.rs  arrow_right.rs  arrow_up.rs  book.rs  close.rs  discord.rs  ferris.rs  file.rs  filter.rs  github.rs  link.rs  linkedin.rs  location.rs  menu.rs  moon.rs  project.rs  roadmap.rs  search.rs  share.rs  star_bold.rs  sun_line.rs  sun_moon.rs  telegram.rs  twitter.rs  youtube.rs
crates/leptos/src/input/: search.rs
js/react/: eslint.config.ts  index.html  package.json  tsconfig.app.json  tsconfig.lib.json  vite.config.ts
js/react/lib/: index.ts  showcases.ts  styles.css
js/react/showcase/: App.tsx  ErrorBoundary.ts  icons.tsx  main.tsx  styles.css
js/showcase/: eslint.config.ts  package.json  tsconfig.lib.json  vite.config.ts
js/showcase/src/: case.tsx  error.tsx  field.tsx  icons.tsx  index.ts  main.tsx  styles.css  theme.tsx  vite-env.d.ts
js/vue/: eslint.config.ts  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
js/vue/lib/: index.ts  showcases.ts
js/vue/lib/icons/: index.ts  (+1 more)
js/vue/showcase/: main.ts  styles.css
scripts/: dotenv.nu  figma.json  figma.nu  graphql.nu  issue-types.json  labels.json  labels.nu  main.nu  project-fields.json  project.nu  util.nu
styles/: README.md  breakpoints.css  components.css  package.json  safelist.txt  tailwindcss.css  theme.css  utilities.css
styles/components/: avatar.css  badge.css  button.css  card.css  chip.css  collaborators.css  dropdown-tree-end.css  dropdown-tree-start.css  dropdown-tree-subject.css  dropdown-tree-subtopic.css  dropdown-tree-topic.css  dropdown.css  flap.css  input-search.css  input.css  level.css  progress-bar.css  radio.css  tag.css  text.css  topic.css
styles/utilities/: container.css  dark.css  scrollbar.css  shadow.css
(+126 files in other folders)
