[package]
name = "rustlanges-components"
version = "0.1.0"
edition = "2024"

[lib]
path = "crates/lib.rs"

[features]
leptos = ["leptos-components"]

[workspace]
members = [ "crates/core", "crates/leptos" ]

[dependencies]
components-core = { package = "rustlanges-components-core", version = "0.1.0", path = "./crates/core" }
leptos-components = { path = "./crates/leptos", optional = true }
