[package]
name = "rustlanges-components"
description = "RustLangES components library"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
path = "crates/lib.rs"

[features]
leptos = ["leptos-components"]

[workspace]
members = [ "crates/core", "crates/leptos" ]

[dependencies]
components-core = { package = "rustlanges-components-core", version = "0.1", path = "./crates/core" }
leptos-components = { path = "./crates/leptos", version = "0.1", optional = true }
