[package]
version = "0.2.9"
name = "rustlanges-components"
description = "RustLangES components library"
edition = "2024"
license = "MIT"

[lib]
path = "crates/lib.rs"

[features]
leptos = ["leptos-components"]

[workspace]
members = [ "crates/core", "crates/leptos" ]
package = { version = "0.2.9" }

[workspace.dependencies]
components-core = { package = "rustlanges-components-core", version = "0.2", path = "./crates/core" }

[dependencies]
components-core = { package = "rustlanges-components-core", version = "*", path = "./crates/core" }
leptos-components = { path = "./crates/leptos", version = "*", optional = true }
