[package]
name = "leptos-components"
description = "RustLangES leptos components"
version = { workspace = true }
edition = "2024"
license = "MIT"

[dependencies]
leptos = { version = "0.8", default-features = false }
components-core = { workspace = true }
tailwind_fuse = { version = "0.3", features = [
    "variant",
    "tailwind_fuse_macro",
] }
